# veyra-cli

./: .gitignore  README.md  pyproject.toml
veyra/: __main__.py  chat_store.py  completion.py  hf.py  inspect.py  prompts.py  registry.py  runner.py  shell.py  theme.py
