[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veyra"
version = "0.1.0"
description = "Lightweight CLI for local ONNX causal language models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "onnxruntime",
  "tokenizers",
  "huggingface_hub",
  "numpy",
  "prompt_toolkit",
]

[project.urls]
Homepage = "https://github.com/Jdudeo5972/veyra-cli"
Repository = "https://github.com/Jdudeo5972/veyra-cli"
Issues = "https://github.com/Jdudeo5972/veyra-cli/issues"

[project.scripts]
veyra = "veyra.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["veyra"]
